<?xml version="1.0"?>
<package format="2">
  <name>ambf_client</name>
  <version>0.0.0</version>
  <description>The ambf_client package</description>

  <maintainer email="schandrasekhar@wpi.edu">Shreyas Chandra Sekhar</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ambf_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>ambf_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>ambf_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
